# libp2p-grpc-rs

./: Cargo.toml  README.md
examples/: Cargo.toml  build.rs
examples/proto/nodeinfo/: nodeinfo.proto
examples/src/: lib.rs
src/: adapter.rs  behaviour.rs  handler.rs  lib.rs  protocol.rs
