[package]
name = "libp2p-grpc-rs"
version = "0.1.1"
edition = "2021"

[dependencies]
futures = "0.3"
pin-project = "1.0"
thiserror = "1.0"
void = "1.0"
tracing = { version = "0.1.16" }
libp2p = { version = "0.51" }
tonic = { version = "0.9.2" }
tower = { version = "0.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
smallvec = "1.6"

[workspace]
members = ["examples"]
resolver = "2"
