[package]
name = "libp2p-grpc-rs"
version = "0.1.2"
edition = "2021"
rust-version = "1.65.0"
description = "A library running gRPC on LibP2P for Rust"
authors = ["Bill.W <0xbillw@gmail.com>"]
license-file = "LICENSE"
repository = "https://github.com/0xbillw/libp2p-grpc-rs"
keywords = ["libp2p", "gRPC", "networking", "peer-to-peer"]
categories = ["network-programming", "asynchronous"]

[dependencies]
futures = "0.3"
pin-project = "1.0"
thiserror = "1.0"
void = "1.0"
tracing = { version = "0.1.16" }
libp2p = { version = "0.51" }
tonic = { version = "0.9.2" }
tower = { version = "0.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
smallvec = "1.6"

[workspace]
members = ["examples"]
resolver = "2"
